refactor(dict): 替换 String.isBlank() 为 trim().isEmpty() 以兼容更低 Java 版本